# archon-toilet

./: Cargo.toml  LICENSE
src/: database.rs  lib.rs  main.rs  rendering.rs
templates/: tables.handlebars
